<resources>
    <string name="app_name">CryptoLyst</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="llegada_user">Bienvenido a CryptoLyst\n Por favor Introduce tu nombre</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="ingresar">Ingresar</string>
    <string name="mensaje_bienvenida">Todo listo!(*^▽^*)\n Esperamos que disfrutes toda la ayuda que CryptoLyst te brindará</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="supply">Supply</string>
    <string name="market_cap">Market Cap</string>
    <string name="price">Price</string>
    <string name="notificacion">¿Deseas ver la información de esta crypto en tus notificaciones?</string>
</resources>