<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:cardBackgroundColor="#75000000"
            app:cardCornerRadius="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.236">

            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/secular_one"
                android:text="@string/llegada_user"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="148dp"
            android:layout_height="194dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/ivCryptos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/cryptos" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.07999998"
            app:prefixTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsuario"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="#7E000000"
                android:fontFamily="@font/secular_one"
                android:hint="@string/introduce_tu_nombre"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:fontFamily="@font/secular_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>