<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo">

        <ImageView
            android:id="@+id/ivDCoin"
            android:layout_width="258dp"
            android:layout_height="233dp"
            android:src="@drawable/cryptos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998" />

        <TextView
            android:id="@+id/tvDNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#75000000"
            android:fontFamily="@font/secular_one"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSym"
            app:layout_constraintVertical_bias="0.084" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#75000000"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDNom"
            app:layout_constraintVertical_bias="0.060000002">

            <TextView
                android:id="@+id/tvDNPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/secular_one"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/secular_one"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#75000000"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.07999998">

            <TextView
                android:id="@+id/tvDSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/secular_one"
                android:text="@string/supply"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDNSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/secular_one"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#75000000"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.100000024">

            <TextView
                android:id="@+id/tvDMarketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/secular_one"
                android:text="@string/market_cap"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDIDMCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/secular_one"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="#6D000000"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDCoin"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>